--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 
             gtag('config', 'UA-112025066-1');
         </script>
-        <!-- Hotjar Tracking Code for www.damanojornal.com/loja -->
+        @*<!-- Hotjar Tracking Code for www.damanojornal.com/loja -->
         <script>
             (function (h, o, t, j, a, r) {
                 h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
@@ -29,7 +29,7 @@
                 r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
                 a.appendChild(r);
             })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
-        </script>
+        </script>*@
     </environment>
     
     <environment names="Development">
