--- a/src/Web/DamaWeb/Pages/Customize/Step2.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Step2.cshtml
@@ -153,7 +153,7 @@
                 var color = $(this).css('background-color').replace(/,/g, ';');
 
                 if ($(this).hasClass('dama-customize-color-selected') == false) {
-                    if (colors.length < 2) {
+                    if (colors.length <= 2) {
                         colors.push(color);
                         $(this).toggleClass('dama-customize-color-selected');
                     }
