customize basket wip

--- a/src/Web/DamaWeb/Pages/Customize/Step3.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Step3.cshtml
@@ -65,7 +65,7 @@
                             <a asp-page="./Step2" asp-route-id="@Model.CustomizeModel.CatalogItemId" class="btn btn-dama-menta mt-0 mr-3 text-white" role="button">&larr; Voltar</a>
                         </div>
                         <div class="offset-sm-7 col-sm-3 offset-3 col-6">
-                            <button type="submit" class="btn btn-dama-pink mt-0 mr-3 w-100" asp-page-handler="Submit">ENVIAR</button>
+                            <button type="submit" class="btn btn-dama-pink mt-0 mr-3 w-100" asp-page-handler="Submit">ADICIONAR AO CARRINHO</button>
                         </div>
                     </div>
                 </div>
