--- a/src/Web/SalesWeb/wwwroot/css/basket/basket-status/basket-status.component.css
+++ b/src/Web/SalesWeb/wwwroot/css/basket/basket-status/basket-status.component.css
@@ -27,7 +27,7 @@
 }
 
 .esh-basketstatus-badge {
-    background-color: #FC629D;
+    background-color: #800000;
     border-radius: 50%;
     color: #FFFFFF;
     display: block;
