--- a/src/Web/SalesWeb/Pages/Basket/Checkout.cshtml
+++ b/src/Web/SalesWeb/Pages/Basket/Checkout.cshtml
@@ -28,6 +28,11 @@
                         </div>
                         <div id="billing-group">
                             <div class="form-group">
+                                <label asp-for="UserAddress.InvoiceEmail"></label>
+                                <input asp-for="UserAddress.InvoiceEmail" class="form-control">
+                                <span asp-validation-for="UserAddress.InvoiceEmail" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
                                 <label asp-for="UserAddress.InvoiceName"></label>
                                 <input asp-for="UserAddress.InvoiceName" class="form-control">
                                 <span asp-validation-for="UserAddress.InvoiceName" class="text-danger"></span>
