salesweb: fix redirect login, change colors

--- a/src/Web/SalesWeb/Pages/Customize/Index.cshtml
+++ b/src/Web/SalesWeb/Pages/Customize/Index.cshtml
@@ -92,7 +92,7 @@
             
 
             function selectProduct(elem) {
-                elem.find('img').css('border', "5px solid #800000");
+                elem.find('img').css('border', "5px solid #e0a240");
                 elem.siblings().find('img').css('border', "");
             }
 
