--- a/src/Web/SalesWeb/Pages/Customize/Step2.cshtml
+++ b/src/Web/SalesWeb/Pages/Customize/Step2.cshtml
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     @*<div class="w-100 d-none d-sm-block"></div>*@
-                    <div class="card" style="width: 5rem;background-color:#800000">
+                    <div class="card" style="width: 5rem;background-color:#e0a240">
                         <div class="card-body">
                         </div>
                     </div>
