--- a/src/Web/SalesWeb/wwwroot/css/app.component.css
+++ b/src/Web/SalesWeb/wwwroot/css/app.component.css
@@ -1,5 +1,5 @@
 ﻿.esh-app-footer {
-    background-color: #800000;
+    background-color: #e0a240;
     border-top: 1px solid #EEEEEE;
     margin-top: 2.5rem;
     padding-bottom: 2.5rem;
