--- a/src/Web/SalesWeb/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/src/Web/SalesWeb/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -6,5 +6,5 @@
 
 <h2 class="dama-heading-normal-font">@ViewData["Title"]</h2>
 <p>
-    A sua password foi recuperada. Por favor <a asp-page="./Signin">clique aqui para fazer login</a>.
+    A sua password foi recuperada. Por favor <a asp-page="./Login">clique aqui para fazer login</a>.
 </p>
