--- a/src/Web/SalesWeb/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Web/SalesWeb/Pages/Shared/_LoginPartial.cshtml
@@ -33,7 +33,7 @@
 else
 {
     <li class="nav-item list-inline-item">
-        <a asp-page="/Account/Signin" class="nav-link px-0 px-sm-3">
+        <a asp-page="/Account/Login" class="nav-link px-0 px-sm-3">
             <i class="fas fa-user fa-lg"></i>
             <span class="d-none d-sm-inline">Entrar</span>
         </a>
